# flamingo

./: .codeclimate.yml  .coveragerc  .env-sample  .gitignore  .pyup.yml  .travis.yml  LICENSE  Procfile  README.md  codeclimate.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: automerge.yml  ci.yml
contest/: admin.py  apps.py  forms.py  models.py  tests.py  views.py
contest/migrations/: 0001_initial.py  0002_entry.py  0003_auto_20160131_0403.py  0004_auto_20200412_2132.py
flamingo/: .coveragerc  manage.py  settings.py  tests.py  urls.py  wsgi.py
flamingo/contest/: admin.py  forms.py  models.py  tests.py  views.py
flamingo/contest/migrations/: 0001_initial.py  0002_entry.py  0003_auto_20160131_0403.py  0003_vote.py
flamingo/flamingo/: custom_storages.py  gunicorn.py  settings.py  tests.py  urls.py  wsgi.py
flamingo/flamingo/settings/: __init__.py  base.py  prod.py  travis.py
flamingo/photo/: models.py  tests.py
flamingo/photo/migrations/: 0001_initial.py
flamingo/settings/: __init__.py  base.py  prod.py
flamingo/users/: admin.py  decorators.py  forms.py  managers.py  models.py  tests.py  views.py
flamingo/users/migrations/: 0001_initial.py
photo/: admin.py  apps.py  models.py  tests.py
photo/migrations/: 0001_initial.py  0002_auto_20200412_2132.py
static/css/: flamingo.css
static/js/: contest-details.js
templates/: base.html  contest_details.html  home.html  login.html  profile.html  register.html  sponsor_details.html
templates/includes/: contest-list.html  photo-entry.html
users/: admin.py  decorators.py  exceptions.py  forms.py  managers.py  models.py  tests.py  views.py
users/migrations/: 0001_initial.py
