[tool.poetry]
name = "flamingo"
version = "0.1.0"
description = "A photo contest web application."
authors = ["Lucas Connors <lucas@revolutiontech.ca>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.8"
Django = "~3.0"
psycopg2 = "^2.8.4"
Pillow = "^7.1.1"
django-classbasedsettings = "^1.5.0"
python-memcached = "^1.59"
dj-database-url = "^0.5.0"
sorl-thumbnail = "^12.6.3"
whitenoise = "^5.0.1"
django-s3-storage = "^0.13.0"
python-dotenv = "^0.12.0"

[tool.poetry.dev-dependencies]
coverage = "^5.1"
django-pigeon = "^0.3.0"
black = "^19.10b0"
pyupgrade = "^2.3"

[tool.black]
line-length = 88
target_version = ["py38"]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
